Finished Feature engineering

--- a/student.ipynb
+++ b/student.ipynb
@@ -3644,25 +3644,296 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "\n",
+    "\n",
+    "Here I label encoded the target feature to transform the values to numerical values."
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([\"I can't tell\", 'Negative emotion',\n",
+       "       'No emotion toward brand or product', 'Positive emotion'],\n",
+       "      dtype=object)"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Instantiate labelencoder\n",
+    "le = LabelEncoder() # initializing the lib\n",
+    "#fit transform \n",
+    "data['emotion_code'] = le.fit_transform(data.emotion)\n",
+    "le.classes_ # viewing the classes"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tweet_text</th>\n",
+       "      <th>recipient</th>\n",
+       "      <th>emotion</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>lemmatized_review</th>\n",
+       "      <th>emotion_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>[user, 3g, iphone, 3, hr, tweeting, riseaustin...</td>\n",
+       "      <td>iPhone</td>\n",
+       "      <td>Negative emotion</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>user 3g iphone 3 hr tweeting riseaustin dead n...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>[user, know, user, awesome, ipadiphone, app, l...</td>\n",
+       "      <td>iPad or iPhone App</td>\n",
+       "      <td>Positive emotion</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>user know user awesome ipadiphone app likely a...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>[user, wait, ipad, 2, also, sale, sxsw]</td>\n",
+       "      <td>iPad</td>\n",
+       "      <td>Positive emotion</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>user wait ipad 2 also sale sxsw</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>[user, hope, year, festival, crashy, year, iph...</td>\n",
+       "      <td>iPad or iPhone App</td>\n",
+       "      <td>Negative emotion</td>\n",
+       "      <td>Apple</td>\n",
+       "      <td>user hope year festival crashy year iphone app...</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>[user, great, stuff, fri, sxsw, marissa, mayer...</td>\n",
+       "      <td>Google</td>\n",
+       "      <td>Positive emotion</td>\n",
+       "      <td>Google</td>\n",
+       "      <td>user great stuff fri sxsw marissa mayer google...</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                          tweet_text           recipient  \\\n",
+       "0  [user, 3g, iphone, 3, hr, tweeting, riseaustin...              iPhone   \n",
+       "1  [user, know, user, awesome, ipadiphone, app, l...  iPad or iPhone App   \n",
+       "2            [user, wait, ipad, 2, also, sale, sxsw]                iPad   \n",
+       "3  [user, hope, year, festival, crashy, year, iph...  iPad or iPhone App   \n",
+       "4  [user, great, stuff, fri, sxsw, marissa, mayer...              Google   \n",
+       "\n",
+       "            emotion   brand  \\\n",
+       "0  Negative emotion   Apple   \n",
+       "1  Positive emotion   Apple   \n",
+       "2  Positive emotion   Apple   \n",
+       "3  Negative emotion   Apple   \n",
+       "4  Positive emotion  Google   \n",
+       "\n",
+       "                                   lemmatized_review  emotion_code  \n",
+       "0  user 3g iphone 3 hr tweeting riseaustin dead n...             1  \n",
+       "1  user know user awesome ipadiphone app likely a...             3  \n",
+       "2                    user wait ipad 2 also sale sxsw             3  \n",
+       "3  user hope year festival crashy year iphone app...             1  \n",
+       "4  user great stuff fri sxsw marissa mayer google...             3  "
+      ]
+     },
+     "execution_count": 71,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# A  preview to ensure encoding is done \n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>emotion</th>\n",
+       "      <th>emotion_code</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Negative emotion</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Positive emotion</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Positive emotion</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Negative emotion</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Positive emotion</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>No emotion toward brand or product</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>Positive emotion</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>Positive emotion</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>Positive emotion</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>Positive emotion</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>Positive emotion</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>Positive emotion</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>Positive emotion</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>Positive emotion</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>Positive emotion</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               emotion  emotion_code\n",
+       "0                     Negative emotion             1\n",
+       "1                     Positive emotion             3\n",
+       "2                     Positive emotion             3\n",
+       "3                     Negative emotion             1\n",
+       "4                     Positive emotion             3\n",
+       "5   No emotion toward brand or product             2\n",
+       "7                     Positive emotion             3\n",
+       "8                     Positive emotion             3\n",
+       "9                     Positive emotion             3\n",
+       "10                    Positive emotion             3\n",
+       "11                    Positive emotion             3\n",
+       "12                    Positive emotion             3\n",
+       "13                    Positive emotion             3\n",
+       "14                    Positive emotion             3\n",
+       "15                    Positive emotion             3"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Displaying the encoding scheme\n",
+    "data[['emotion', 'emotion_code']].head(15)"
+   ]
   },
   {
    "cell_type": "code",
