--- a/student.ipynb
+++ b/student.ipynb
@@ -4494,7 +4494,171 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Linear SVC Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Support Vector Machine:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.73      0.60      0.66       106\n",
+      "           3       0.93      0.96      0.95       602\n",
+      "\n",
+      "    accuracy                           0.91       708\n",
+      "   macro avg       0.83      0.78      0.80       708\n",
+      "weighted avg       0.90      0.91      0.90       708\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.svm import LinearSVC\n",
+    "# Support Vector Machine\n",
+    "svm = LinearSVC()\n",
+    "svm.fit(X_train, y_train)\n",
+    "y_pred_svm = svm.predict(X_test)\n",
+    "print(\"Support Vector Machine:\")\n",
+    "print(classification_report(y_test, y_pred_svm))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.9067796610169492\n",
+      "Precision: 0.8297653958944282\n",
+      "Recall: 0.7819532376355545\n",
+      "F1 Score: 0.8028919972328614\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
+    "\n",
+    "# Predict the labels for the test data\n",
+    "y_pred_svm = svm.predict(X_test)\n",
+    "\n",
+    "# Calculate and print the accuracy of the model on the test data\n",
+    "accuracy = accuracy_score(y_test, y_pred_svm)\n",
+    "print(f\"Accuracy: {accuracy}\")\n",
+    "\n",
+    "# Calculate and print the precision of the model on the test data\n",
+    "# Set the `average` parameter to 'macro' for macro-average precision score\n",
+    "precision = precision_score(y_test, y_pred_svm, average='macro')\n",
+    "print(f\"Precision: {precision}\")\n",
+    "\n",
+    "# Calculate and print the recall of the model on the test data\n",
+    "# Set the `average` parameter to 'macro' for macro-average recall score\n",
+    "recall = recall_score(y_test, y_pred_svm, average='macro')\n",
+    "print(f\"Recall: {recall}\")\n",
+    "\n",
+    "# Calculate and print the F1 score of the model on the test data\n",
+    "# Set the `average` parameter to 'macro' for macro-average F1 score\n",
+    "f1 = f1_score(y_test, y_pred_svm, average='macro')\n",
+    "print(f\"F1 Score: {f1}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## XG Boost Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "              colsample_bynode=1, colsample_bytree=1, gamma=0, gpu_id=-1,\n",
+       "              importance_type='gain', interaction_constraints='',\n",
+       "              learning_rate=0.300000012, max_delta_step=0, max_depth=6,\n",
+       "              min_child_weight=1, missing=nan, monotone_constraints='()',\n",
+       "              n_estimators=100, n_jobs=0, num_parallel_tree=1,\n",
+       "              objective='multi:softprob', random_state=0, reg_alpha=0,\n",
+       "              reg_lambda=1, scale_pos_weight=None, subsample=1,\n",
+       "              tree_method='exact', validate_parameters=1, verbosity=None)"
+      ]
+     },
+     "execution_count": 98,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Create an XGBoost classifier instance\n",
+    "xgb_classifier = xgb.XGBClassifier()\n",
+    "\n",
+    "# Fit the model on the training data\n",
+    "xgb_classifier.fit(X_train_multi, y_train_multi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 99,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Make predictions on the testing data\n",
+    "#predictions = xgb_classifier.predict(test_x)\n",
+    "y_pred_xgb =  xgb_classifier.predict(X_test_multi)\n",
+    "y_train_pred_xgb =  xgb_classifier.predict(X_train_multi)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train 0.7848676957001103\n",
+      "test 0.685226019845645\n"
+     ]
+    }
+   ],
+   "source": [
+    "# checking the accuracy\n",
+    "print('train',accuracy_score(y_train_multi, y_train_pred_xgb))\n",
+    "print('test',accuracy_score(y_test_multi, y_pred_xgb))"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The model performed like this\n",
+    "* Accuracy on the training set: 78%\n",
+    "* Accuracy on the testing set: 68%\n",
+    "* The accuracy means that the model can predict with an accuracy of 78% whether a tweet falls within the specified labels.\n",
+    "The model is not fit for prediction since it is overfitting.\n",
+    "\n"
    ]
   },
   {
@@ -4505,18 +4669,164 @@
    "source": []
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Resampling the Xgboost"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 102,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "XGBClassifier(base_score=0.5, booster='gbtree', colsample_bylevel=1,\n",
+       "              colsample_bynode=1, colsample_bytree=1, gamma=0, gpu_id=-1,\n",
+       "              importance_type='gain', interaction_constraints='',\n",
+       "              learning_rate=0.300000012, max_delta_step=0, max_depth=6,\n",
+       "              min_child_weight=1, missing=nan, monotone_constraints='()',\n",
+       "              n_estimators=100, n_jobs=0, num_parallel_tree=1,\n",
+       "              objective='multi:softprob', random_state=0, reg_alpha=0,\n",
+       "              reg_lambda=1, scale_pos_weight=None, subsample=1,\n",
+       "              tree_method='exact', validate_parameters=1, verbosity=None)"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from imblearn.over_sampling import SMOTE\n",
+    "\n",
+    "# Create a SMOTE instance\n",
+    "smote = SMOTE()\n",
+    "\n",
+    "# Resample the data\n",
+    "X_resampled, y_resampled = smote.fit_resample(X_train_multi, y_train_multi)\n",
+    "\n",
+    "# Now you can use the resampled data to train your model\n",
+    "xgb_classifier.fit(X_resampled, y_resampled)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy: 0.6786108048511577\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Fit the model on the resampled training data\n",
+    "xgb_classifier.fit(X_resampled,y_resampled)\n",
+    "\n",
+    "# Make predictions on the testing data\n",
+    "predictions = xgb_classifier.predict(X_test_multi)\n",
+    "\n",
+    "# Evaluate the model\n",
+    "accuracy = accuracy_score(y_test_multi, predictions)\n",
+    "print(\"Accuracy:\", accuracy)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Despite implementing resampling techniques to address class imbalance, the model's accuracy has not improved significantly. This suggests that other factors within the dataset may be limiting predictive performance.\n",
+    "\n",
+    "* The binary logistic regression model performs best.\n",
+    "* Linear SVC model also perfomed better\n",
+    "* For Multiclass XGBoost was better "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Limitation and Challenges \n",
+    "- Class Imbalance Issue: The dataset suffers from class imbalance, where one sentiment class is dominant while others are underrepresented. This can result in biased models that are more accurate for the majority class but perform poorly on the minority classes. Addressing this issue is important to ensure fair and balanced sentiment analysis.\n",
+    "\n",
+    "- Limited Dataset Size: The dataset used for sentiment analysis is relatively small, which can limit the model's ability to capture the full complexity of sentiments expressed in text. A larger and more diverse dataset would provide a broader representation of sentiments and improve the model's performance and generalization.\n",
+    "\n",
+    "- Language Ambiguity and Sarcasm Detection: Language can be inherently ambiguous, and detecting sarcasm in text adds an extra layer of complexity. Sarcasm detection is challenging due to the subtleties and nuances involved. Developing robust strategies to handle language ambiguity and detect sarcasm is crucial for accurate sentiment analysis"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 7.Findings \n",
+    "1. Most tweets were directed to None brand category. This may indicate that customers were not engaging with the brand.\n",
+    "2. Positive sentiments had the highest count compared to Negative sentiments, indicating that most people in general liked respective brands(Google and Apple)\n",
+    "3. Most of the positive tweets were directed to Apple brands \n",
+    "4. In the field of sentiment analysis, one of the significant challenges is dealing with language ambiguity and sarcasm    detection. Natural language is complex and often subjective, making it difficult to accurately interpret sentiments from text. \n",
+    "5. On average most of the tweets were 10-15 words long - more words increase ambiguity.\n",
+    "6. NLP is a difficult task to model accurately."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 8.Recommendations\n",
+    "We recommend that there be more customer engagement.\n",
+    "\n",
+    "Probably check on this areas;\n",
+    "\n",
+    "   * Churn ratio - rate at which customers discontinue their relationship with a product company within a given time period\n",
+    "   * Social media influencers through brand or product endorsement\n",
+    "   * Customer feedback - The brands can introduce a rating system to accurately capture the sentiments of their customers "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# 9. Next steps\n",
+    "- In our future work, we plan to explore advanced techniques such as incorporating attention mechanisms, using ensemble methods to further enhance the model's performance by incorporating domain-specific and fine-tuning the model on industry-specific datasets could improve its accuracy and adaptability.\n",
+    "\n",
+    "- By considering these evaluation metrics, addressing limitations, and planning for future improvements, we aim to develop a robust NLP sentiment analysis solution that effectively captures sentiment\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 104,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['xgb.pkl']"
+      ]
+     },
+     "execution_count": 104,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import joblib\n",
+    "\n",
+    "# Save the trained model as a pickle file\n",
+    "joblib.dump(log_reg, 'logistic_regression_model.pkl')\n",
+    "joblib.dump(svm, 'svm_model.pkl')\n",
+    "joblib.dump(xgb_classifier, 'xgb.pkl')\n"
+   ]
   },
   {
    "cell_type": "code",
