Added Presentation.pdf file for project presentation

--- a/student.ipynb
+++ b/student.ipynb
@@ -5,7 +5,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Twitter Sentiment Analysis Project"
+    "# Twitter Sentiment Analysis "
    ]
   },
   {
@@ -13,7 +13,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Business Overview"
+    "## Overview"
    ]
   },
   {
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As a consulting firm, Twitter has entrusted us with the responsibility of constructing a model capable of assessing the sentiment expressed in a Tweet by analyzing its content. This model should accurately classify Twitter sentiments regarding Apple and Google products into categories of positivity, negativity, or neutrality. The primary objective is to extract valuable insights from public sentiment, enabling businesses to make well-informed decisions in shaping their strategic approaches and enhancing overall customer satisfaction."
+    "As a consulting firm, Twitter has entrusted us with the responsibility of constructing a model capable of assessing the sentiment expressed in a Tweet by analyzing its content. This model should accurately classify Twitter sentiments regarding Apple and Google products into categories of positivity, negativity, or neutrality. The primarAs a consulting firm, Twitter has entrusted us with the responsibility of constructing a model capable of assessing the sentiment expressed in a Tweet by analyzing its content. This model should accurately classify Twitter sentiments regarding Apple and Google products into categories of positivity, negativity, or neutrality. The primary objective is to extract valuable insights from public sentiment, enabling businesses to make well-informed decisions in shaping their strategic approaches and enhancing overall customer satisfaction.y objective is to extract valuable insights from public sentiment, enabling businesses to make well-informed decisions in shaping their strategic approaches and enhancing overall customer satisfaction."
    ]
   },
   {
@@ -120,23 +120,6 @@
     "\n",
     "In conclusion, the sentiment analysis model developed using logistic regression demonstrated satisfactory performance in classifying tweet sentiments. The pre-processing steps and modeling choices contributed to accurate predictions and meaningful insights. However, limitations such as missing values and data quality issues should be considered when interpreting the results. Recommendations include further refining the model and expanding the dataset for improved sentiment analysis accuracy"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -864,7 +847,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 105,
    "metadata": {},
    "outputs": [
     {
@@ -900,6 +883,8 @@
     "plt.figure(figsize=(12, 7))\n",
     "sns.countplot(data['emotion'])\n",
     "plt.title('Emotion Distribution Count')\n",
+    "\n",
+    "plt.savefig('Distribution of emotion column.png')\n",
     "plt.show();"
    ]
   },
@@ -4484,7 +4469,7 @@
    "source": [
     "The model results are as follows\n",
     "* Accuracy on the training set: 80%\n",
-    "* Accuracy on the testing set: 66%\n",
+    "* Accuracy on the testing set: 65%\n",
     "\n",
     "The current model is not fit for prediction since it is not generalizing well to new data even with high accuracy. The model is overfitting.\n"
    ]
@@ -4527,6 +4512,14 @@
     "y_pred_svm = svm.predict(X_test)\n",
     "print(\"Support Vector Machine:\")\n",
     "print(classification_report(y_test, y_pred_svm))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model evaluation"
    ]
   },
   {
@@ -4614,6 +4607,14 @@
     "\n",
     "# Fit the model on the training data\n",
     "xgb_classifier.fit(X_train_multi, y_train_multi)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Model Evaluation"
    ]
   },
   {
@@ -4783,7 +4784,7 @@
    "metadata": {},
    "source": [
     "# 8.Recommendations\n",
-    "We recommend that there be more customer engagement.\n",
+    "From the analysis I recommend that there be more customer engagement.\n",
     "\n",
     "Probably check on this areas;\n",
     "\n",
@@ -4827,20 +4828,6 @@
     "joblib.dump(svm, 'svm_model.pkl')\n",
     "joblib.dump(xgb_classifier, 'xgb.pkl')\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
