--- a/student.ipynb
+++ b/student.ipynb
@@ -39,7 +39,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As a consulting firm, Twitter has entrusted us with the responsibility of constructing a model capable of assessing the sentiment expressed in a Tweet by analyzing its content. This model should accurately classify Twitter sentiments regarding Apple and Google products into categories of positivity, negativity, or neutrality. The primarAs a consulting firm, Twitter has entrusted us with the responsibility of constructing a model capable of assessing the sentiment expressed in a Tweet by analyzing its content. This model should accurately classify Twitter sentiments regarding Apple and Google products into categories of positivity, negativity, or neutrality. The primary objective is to extract valuable insights from public sentiment, enabling businesses to make well-informed decisions in shaping their strategic approaches and enhancing overall customer satisfaction.y objective is to extract valuable insights from public sentiment, enabling businesses to make well-informed decisions in shaping their strategic approaches and enhancing overall customer satisfaction."
+    "As a consulting firm, Twitter has entrusted us with the responsibility of constructing a model capable of assessing the sentiment expressed in a Tweet by analyzing its content. This model should accurately classify Twitter sentiments regarding Apple and Google products into categories of positivity, negativity, or neutrality. The primary objective is to extract valuable insights from public sentiment, enabling businesses to make well-informed decisions in shaping their strategic approaches and enhancing overall customer satisfaction."
    ]
   },
   {
@@ -4524,7 +4524,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Support Vector Machine (Training Data):\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.99      0.99      0.99       463\n",
+      "           3       1.00      1.00      1.00      2368\n",
+      "\n",
+      "    accuracy                           1.00      2831\n",
+      "   macro avg       1.00      1.00      1.00      2831\n",
+      "weighted avg       1.00      1.00      1.00      2831\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Predict on the training data\n",
+    "y_pred_svm_train = svm.predict(X_train)\n",
+    "\n",
+    "# Evaluate and print the classification report\n",
+    "print(\"Support Vector Machine (Training Data):\")\n",
+    "print(classification_report(y_train, y_pred_svm_train))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -4565,9 +4596,55 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Based on the model results for both training and  test data it performs better on the training data this implies that the model is overfitting and it is capturing noise and random fluctuations in the training set rather than the underlying patterns that generalize to new, unseen data.So i went further and tried to address this problem of overfitting by using regularization technique"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Support Vector Machine Regularized:\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           1       0.77      0.60      0.68       106\n",
+      "           3       0.93      0.97      0.95       602\n",
+      "\n",
+      "    accuracy                           0.91       708\n",
+      "   macro avg       0.85      0.79      0.81       708\n",
+      "weighted avg       0.91      0.91      0.91       708\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Defined the regularization parameter c\n",
+    "c = 0.5\n",
+    "\n",
+    "\n",
+    "# Support Vector Machine regularized\n",
+    "svm = LinearSVC(C=c)\n",
+    "svm.fit(X_train, y_train)\n",
+    "y_pred_svm = svm.predict(X_test)\n",
+    "print(\"Support Vector Machine Regularized:\")\n",
+    "print(classification_report(y_test, y_pred_svm))\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Regularized Linear SVM model exhibits improved generalization on the test data compared to the initial model. It achieves a higher F1-Score for both low and high-risk classes while maintaining a high level of precision and recall. This suggests that the regularization has helped mitigate overfitting, and the model is performing well on new, unseen data."
+   ]
   },
   {
    "attachments": {},
@@ -4663,13 +4740,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
@@ -4746,9 +4816,9 @@
    "source": [
     "Despite implementing resampling techniques to address class imbalance, the model's accuracy has not improved significantly. This suggests that other factors within the dataset may be limiting predictive performance.\n",
     "\n",
-    "* The binary logistic regression model performs best.\n",
-    "* Linear SVC model also perfomed better\n",
-    "* For Multiclass XGBoost was better "
+    "* The binary logistic regression model perform better.\n",
+    "* Linear SVm is te model that performs best.\n",
+    "* For Multiclass XGBoost was better. "
    ]
   },
   {
